--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
             </div>
             <div class="service">
                 <img src="video-editing.jpg" alt="Video Editing">
-                <h3>Video Editing</h3>
+                <h3>Wildlife Photography</h3>
                 <p>Professional video editing and post-production services for all your needs.</p>
             </div>
             <div class="service">
                 <img src="video-editing.jpg" alt="Video Editing">
-                <h3>Video Editing</h3>
+                <h3>Scene Photography</h3>
                 <p>Professional video editing and post-production services for all your needs.</p>
             </div>
             <div class="service">
@@ -106,7 +106,7 @@
                         their services to anyone in need of professional video editing.”</p>
                     <i class="fas fa-quote-right"></i>
                 </blockquote>
-                <p class="testimonial-author"><strong>John Doe, CEO of ABC Company</strong></p>
+                <p class="testimonial-author"><strong>Muntazir Hussain, Valuable Customer</strong></p>
             </div>
             <div class="testimonial">
                 <blockquote>
@@ -116,7 +116,7 @@
                         services again in the future.”</p>
                     <i class="fas fa-quote-right"></i>
                 </blockquote>
-                <p class="testimonial-author"><strong>Jane Smith, Director of XYZ Corporation</strong></p>
+                <p class="testimonial-author"><strong>Adil Wani, Owner TSS Clicks</strong></p>
             </div>
             <div class="testimonial">
                 <blockquote>
@@ -127,7 +127,7 @@
                         was nothing short of amazing.”</p>
                     <i class="fas fa-quote-right"></i>
                 </blockquote>
-                <p class="testimonial-author"><strong>Bob Johnson, Founder of LMN Startup</strong></p>
+                <p class="testimonial-author"><strong>Danyal, Student</strong></p>
             </div>
             <div class="testimonial">
                 <blockquote>
@@ -137,7 +137,7 @@
                         services to anyone looking for high-quality work.”</p>
                     <i class="fas fa-quote-right"></i>
                 </blockquote>
-                <p class="testimonial-author"><strong>Alice Williams, Marketing Manager at OPQ Inc.</strong></p>
+                <p class="testimonial-author"><strong>Irfan, Content Creator</strong></p>
             </div>
         </div>
     </section>
@@ -148,23 +148,23 @@
         <div class="team-members-grid">
             <div class="team-member">
                 <img src="team-member-1.jpg" alt="Team Member 1">
-                <h3>John Doe</h3>
-                <p>Co-Founder / Photographer</p>
+                <h3>Xygum Abbas</h3>
+                <p>Founder / Photographer</p>
             </div>
             <div class="team-member">
                 <img src="team-member-1.jpg" alt="Team Member 1">
-                <h3>John Doe</h3>
-                <p>Co-Founder / Photographer</p>
+                <h3>Muntazir Mehdi</h3>
+                <p>Editor</p>
             </div>
             <div class="team-member">
                 <img src="team-member-1.jpg" alt="Team Member 1">
-                <h3>John Doe</h3>
-                <p>Co-Founder / Photographer</p>
+                <h3>Adil TSS</h3>
+                <p>Photographer/ Videographer</p>
             </div>
             <div class="team-member">
                 <img src="team-member-1.jpg" alt="Team Member 1">
-                <h3>John Doe</h3>
-                <p>Co-Founder / Photographer</p>
+                <h3>Idrees Bhat</h3>
+                <p>Content Creator</p>
             </div>
             <!-- Add more team members here with images -->
         </div>
@@ -175,8 +175,8 @@
         <h2>Reach Us At</h2>
         <p>Contact details and social media links:</p>
         <ul>
-            <li>Email: info@nathanielproductions.com</li>
-            <li>Phone: +1 (123) 456-7890</li>
+            <li>Email: nathanielproductions313@gmail.com.com</li>
+            <li>Phone: +91 (959) 659-3449</li>
             <!-- Add other contact details here -->
         </ul>
         <!-- Add social media links here -->
